Removing insecure dependency and changes over readme file.

--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -1,4 +1,4 @@
-spring.data.mongodb.uri=
+spring.data.mongodb.uri=mongodb://test:test@127.0.0.1:27017/testDB
 server.port=8084
 mapping.prefix=/
 timezone=UTC
