--- a/src/main/resources/application-unitTest.properties
+++ b/src/main/resources/application-unitTest.properties
@@ -1,7 +1,6 @@
-spring.data.mongodb.uri=
+spring.data.mongodb.uri=mongodb://test:test@127.0.0.1:27017/testDB
 server.port=8084
 mapping.prefix=/
-## StellarEmploy ADP tmp collection for saving data
 timezone=UTC
 AUTH_SERVICE_URL=
 CLIENT_ID=
